<resources>

    <!-- Application -->
    <string name="app_name">Focus</string>
    <string name="action_settings">Settings</string>

    <!-- Login screen -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_server">Server</string>
    <string name="login_button">Login</string>


    <!-- Nav Drawer Menu Items -->
    <string-array name="drawer_items">
        <item>My FOCUS</item>
        <item>Starred</item>
        <!--  <item>Synchronize</item>
          <item>Settings</item>
          <item>User manual</item> -->
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <string-array name="drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_starred</item>
        <item>@drawable/ic_synchronize</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_user_manual</item>
    </string-array>

    <!-- Drawer menu -->
    <string name="drawer_menu_synchronize">Synchronize</string>
    <string name="drawer_menu_update">Last update:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="project_fragment">Fragment project</string>
    <string name="bookmark_fragment">Fragment bookmark</string>
    <string name="settings_fragment">Fragment settings</string>
    <string name="usermanual_fragment">Fragment User manual</string>
    <string name="synchronize_fragment">Fragment synchronize</string>


    <!-- My Focus screen -->

    <string name="focus_header_project">My Projects</string>
    <string name="focus_header_notification">New notifications</string>

    <!-- ProjectTemplate Items -->
    <string-array name="focus_project_items">
        <item>Cutting of stand #412</item>
        <item>Company machines overview</item>
        <item>Company roadmap</item>
        <item>Cutting of stand #673</item>
        <item>Stand #455</item>
    </string-array>

    <!-- ProjectTemplate Item Icons -->
    <string-array name="focus_project_icons">
        <item>@drawable/ic_scissors</item>
        <item>@drawable/ic_location_arrow</item>
        <item>@drawable/ic_road</item>
        <item>@drawable/ic_scissors</item>
        <item>@drawable/ic_tachometer</item>
    </string-array>

    <!-- Notification Items -->
    <string-array name="focus_notification_items">
        <item>N/A</item>
    </string-array>

    <!-- Notification Item Icons -->
    <string-array name="focus_notification_icons">
        <item>@drawable/ic_envelope</item>
        <item>@drawable/ic_envelope</item>
    </string-array>

    <!-- End of Focus screen -->


    <!-- My Cutting screen -->
    <string name="cutting_header_dashboard">Dashboards</string>
    <string name="cutting_header_tool">Tools</string>
    <string name="cutting_header_notification">Notifications (1 new)</string>

    <string-array name="cutting_dashboard_items">
        <item>Productivity Panel</item>
        <item>Human Resources Overview</item>
    </string-array>

    <string-array name="cutting_dashboard_icons">
        <item>@drawable/ic_chevron_right</item>
        <item>@drawable/ic_chevron_right</item>
    </string-array>

    <string-array name="cutting_tool_items">
        <item>Polterluchs</item>
        <item>Time Control</item>
        <item>Planing Control</item>
    </string-array>

    <string-array name="cutting_tool_icons">
        <item>@drawable/ic_calculator</item>
        <item>@drawable/ic_clock_o</item>
        <item>@drawable/ic_clock_o</item>
    </string-array>

    <!-- Notification Items -->
    <string-array name="cutting_notification_items">
        <item>Delay approval request (2 days)</item>
        <item>Fowarder in maintenance until 23.12.2015</item>
    </string-array>

    <!-- Notification Item Icons -->
    <string-array name="cutting_notification_icons">
        <item>@drawable/ic_envelope</item>
        <item>@drawable/ic_envelope</item>
    </string-array>

    <!-- End of Cutting screen -->

    <!-- Bookmark  screen -->
    <string name="bookmark_header_dashboard">Projects / Dashboards</string>
    <string name="bookmark_header_tool">Tools</string>
    <!-- End  screen -->


    <!-- TODO: only for test-->
    <string-array name="http_methods">
        <item>GET</item>
        <item>POST</item>
    </string-array>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="hello_world">Hello world!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_page">PageActivity</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="title_activity_image">ImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="focus_crash_toast_text">Oops! I have just crashed, but a report will be sent to my developers, such that it hopefully won\'t happen anymore in future releases.</string>
    <string name="focus_crash_dialog_title">The FOCUS app has crashed!</string>
    <string name="focus_crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
    <string name="focus_crash_dialog_ok_toast">Thank you!</string>
    <string name="focus_crash_dialog_comment_prompt">You might add your comments about the problem below:</string>

    <string name="focus_login_error_bad_credentials">Invalid credentials.</string>
    <string name="focus_login_error_no_network">There is no internet connection. Please connect to the internet</string>
    <string name="focus_drawer_open_description">Open drawer</string>
    <string name="focus_drawer_close_description">Close drawer</string>
    <string name="focus_error_no_configuration_available">Cannot access application content configuration. Exiting...</string>
    <string name="focus_loading_app_content">Loading application content ...</string>
    <string name="progress_wait_message">Please wait ...</string>
    <string name="focus_login_progress_message">Logging in</string>
    <string name="focus_save_user_pref_before">Saving user preferences ...</string>
    <string name="focus_save_user_pref_after">User preferences saved.</string>
    <string name="focus_remove_bookmark_question">Are you sure you want to remove this context from the Bookmarks?</string>
    <string name="focus_add_bookmark_question">Are you sure you want to register this context to the Bookmarks?</string>
    <string name="focus_external_app_button_label_default">Launch</string>
    <string name="app_identifier">App identifier</string>
    <string name="not_acquired_yet">Not acquired, yet.</string>
    <string name="n_a">N/A</string>
    <string name="status">Status</string>
    <string name="installed_ready_to_be_used">Installed. Ready to be used.</string>
    <string name="not_installed">Not installed. Please install before continuing.</string>
    <string name="install_via_google_play">Install via Google Play</string>
    <string name="market_not_installed">Android Market is not installed</string>
    <string name="launching_ext_app">Launching external application</string>
    <string name="appreturned">Application returned.</string>
    <string name="focus_slogan"><![CDATA[Advances in Forestry Control &\nAutomation Systems in Europe]]></string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="replace_picture">Replace Picture</string>
    <string name="invalid_configuration_for_widget">Invalid configuration for widget</string>
    <string name="unknown_path">Unknown path</string>

</resources>
