<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/text_title_external_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Text Title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="10dip"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/external_app_label_identifier"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_identifier"
            android:layout_weight="0.7"/>

        <TextView
            android:id="@+id/external_app_value_identifier"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_acquired_yet"
            android:layout_weight="0.3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/external_app_label_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_weight="0.7"/>

        <TextView
            android:id="@+id/external_app_value_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:layout_weight="0.3"/>

    </LinearLayout>

    <Button
        android:id="@+id/launch_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Launch"/>

</LinearLayout>