<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:weightSum="1"
    android:layout_height="match_parent">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/focus_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_centerHorizontal="true" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:visibility="invisible"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/login_username"
                android:id="@+id/login_username" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_username_textView"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"
                android:ems="15"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/login_password"
                android:id="@+id/login_password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"
                android:ems="15"
                android:id="@+id/login_password_textView" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView />

            <Button
                android:layout_height="wrap_content"
                android:paddingRight="50dip"
                android:paddingLeft="50dip"
                android:text="@string/login_button"
                android:layout_gravity="right"
                android:onClick="onClick"/>
            <!--android:background="@drawable/focus_round_button"-->
        </TableRow>

    </TableLayout>

</LinearLayout>